--- a/crud/javascript/package.json
+++ b/crud/javascript/package.json
@@ -32,7 +32,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "fortjs": "^1.10.1"
+    "fortjs": "^1.10.1",
+    "squirrelly": "^7.9.0"
   },
   "project": {
     "framework": "fortjs",
