--- a/crud/javascript/package.json
+++ b/crud/javascript/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "fortjs": "^1.10.1",
-    "squirrelly": "^7.9.0"
+    "squirrelly": "^7.9.0",
+    "validator": "^12.1.0"
   },
   "project": {
     "framework": "fortjs",
