--- a/winston/typescript/package.json
+++ b/winston/typescript/package.json
@@ -8,7 +8,8 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "npm run webpack:watch",
+    "dev": "npm run webpack:watch",
+    "start": "npm run start",
     "deploy": "NODE_ENV=production npm run build"
   },
   "repository": {
@@ -22,7 +23,7 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "fortjs": "^1.9.0",
+    "fortjs": "^2.0.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.10.0"
   },
