socket io example - upgrade to use v2 fortjs

--- a/socket.io/typescript/package.json
+++ b/socket.io/typescript/package.json
@@ -8,7 +8,8 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "npm run webpack:watch && opn http://localhost:4000"
+    "dev": "npm run webpack:watch && opn http://localhost:4000",
+    "start": "npm run start"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "fortjs": "^1.11.0",
+    "fortjs": "^2.0.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
