--- a/socket.io/javascript/package.json
+++ b/socket.io/javascript/package.json
@@ -8,7 +8,8 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "npm run webpack:watch && opn http://localhost:4000"
+    "dev": "npm run webpack:watch && opn http://localhost:4000",
+    "start": "npm run start"
   },
   "author": "Ujjwal Gupta",
   "license": "MIT",
@@ -28,7 +29,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "fortjs": "^1.11.0",
+    "fortjs": "^2.0.0",
     "socket.io": "^2.2.0"
   },
   "project": {
