--- a/crud/javascript/package.json
+++ b/crud/javascript/package.json
@@ -8,7 +8,7 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "dev": "cross-env NODE_ENV=development npm run webpack:watch",
     "deploy": "NODE_ENV=production npm run build",
     "test": "cross-env NODE_ENV=test jest --runInBand"
   },
@@ -32,7 +32,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "fortjs": "^1.11.0",
+    "fortjs": "^2.0.0",
     "squirrelly": "^7.9.0",
     "validator": "^12.1.0"
   },
