--- a/crud/typescript/package.json
+++ b/crud/typescript/package.json
@@ -8,7 +8,7 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "dev": "cross-env NODE_ENV=development npm run webpack:watch",
     "deploy": "cross-env NODE_ENV=production npm run build",
     "test": "cross-env NODE_ENV=test jest --runInBand"
   },
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
     "@types/squirrelly": "^7.1.0",
-    "fortjs": "^1.11.0",
+    "fortjs": "^2.0.0",
     "squirrelly": "^7.9.0",
     "validator": "^12.1.0"
   },
