--- a/ejs/typescript/package.json
+++ b/ejs/typescript/package.json
@@ -8,7 +8,7 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "npm run webpack:watch && opn http://localhost:4000"
+    "dev": "npm run webpack:watch && opn http://localhost:4000"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
     "ejs": "^2.6.1",
-    "fortjs": "^1.11.0"
+    "fortjs": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.12.15",
