--- a/middleware/typescript/package.json
+++ b/middleware/typescript/package.json
@@ -8,7 +8,7 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint src/**/*.ts",
     "build": "npm run webpack",
-    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "dev": "cross-env NODE_ENV=development npm run webpack:watch",
     "deploy": "cross-env NODE_ENV=production npm run build",
     "test": "cross-env NODE_ENV=test jest --runInBand"
   },
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "fortjs": "^1.9.3",
+    "fortjs": "^2.0.0",
     "helmet": "^3.21.2"
   },
   "devDependencies": {
