--- a/rest/typescript/package.json
+++ b/rest/typescript/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "webpack": "webpack --config webpack.config.js",
     "webpack:watch": "webpack --config webpack.config.js --watch",
-    "lint": "tslint src/**/*.ts",
+    "lint": "tslint **/*.ts --exclude node_modules/",
     "build": "npm run webpack",
-    "dev": "npm run webpack:watch && opn http://localhost:4000",
-    "start": "npm run start",
-    "test": "cross-env NODE_ENV=test jest --runInBand"
+    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "dev": "npm run start",
+    "deploy": "cross-env NODE_ENV=production npm run build",
+    "test:unit": "cross-env NODE_ENV=test jest --config jest.config.spec.js --runInBand",
+    "test:e2e": "npm run build && cross-env NODE_ENV=test jest --config jest.config.e2e.js --runInBand",
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "repository": {
     "type": "git",
@@ -23,24 +26,23 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "class-validator": "^0.9.1",
-    "fortjs": "^2.0.0"
+    "class-validator": "^0.14.0",
+    "fortjs": "^2.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.17",
+    "@types/jest": "^24.0.15",
     "@types/node": "^10.12.15",
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
-    "jest": "^24.8.0",
-    "nodemon-webpack-plugin": "^4.0.6",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^5.3.1",
+    "jest": "^29.5.0",
+    "nodemon-webpack-plugin": "^4.3.2",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^6.0.4",
     "tslint": "^5.11.0",
-    "tslint-config-security": "^1.13.0",
-    "typescript": "^3.2.2",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^5.1.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "project": {
     "framework": "fortjs",
