--- a/socket.io/typescript/tsconfig.json
+++ b/socket.io/typescript/tsconfig.json
@@ -1,18 +1,28 @@
 {
     "compilerOptions": {
+        "baseUrl": "",
         "noImplicitAny": false,
         "noEmitOnError": true,
         "removeComments": false,
         "sourceMap": true,
         "inlineSources": true,
         "moduleResolution": "node",
-        "target": "es5",
+        "target": "es6",
         "preserveConstEnums": true,
         "module": "es6",
         "lib": [
             "es2015",
             "dom"
         ],
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ],
+            "~/*": [
+                "./*"
+            ]
+        }
     }
 }
