--- a/socket.io/javascript/tsconfig.json
+++ b/socket.io/javascript/tsconfig.json
@@ -1,6 +1,14 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
-        "allowJs": true
+        "allowJs": true,
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ],
+            "~/*": [
+                "./*"
+            ]
+        }
     }
 }
