--- a/authentication/javascript/package.json
+++ b/authentication/javascript/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "fortjs-starter",
+  "name": "fortjs-javascript",
   "version": "1.0.0",
-  "description": "",
+  "description": "fortjs application",
   "main": "index.js",
   "scripts": {
     "webpack": "webpack --config webpack.config.js",
     "webpack:watch": "webpack --config webpack.config.js --watch",
-    "lint": "tslint src/**/*.ts",
+    "lint": "eslint /**/*.js --ignore-pattern node_modules/",
     "build": "npm run webpack",
-    "dev": "npm run webpack:watch",
+    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "dev": "npm run start",
     "deploy": "NODE_ENV=production npm run build",
-    "test": "cross-env NODE_ENV=test jest --runInBand"
+    "test:unit": "cross-env NODE_ENV=test jest --config jest.config.spec.js --runInBand",
+    "test:e2e": "npm run build && cross-env NODE_ENV=test jest --config jest.config.e2e.js --runInBand",
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "author": "Ujjwal Gupta",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-decorators": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/preset-env": "^7.22.5",
     "@types/node": "^10.12.15",
     "axios": "^0.19.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^9.1.2",
     "babel-plugin-parameter-decorator-custom": "^1.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.10.0",
-    "jest": "^24.8.0",
-    "nodemon-webpack-plugin": "^4.0.6",
-    "tslint-config-security": "^1.13.0",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
+    "eslint": "^8.43.0",
+    "jest": "^29.5.0",
+    "nodemon-webpack-plugin": "^4.3.2",
+    "ts-jest": "^29.1.0",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "fortjs": "^2.0.0",
-    "validator": "^11.1.0"
+    "fortjs": "^2.1.1",
+    "validator": "^13.9.0"
   },
   "project": {
     "framework": "fortjs",
