--- a/rest/typescript/package.json
+++ b/rest/typescript/package.json
@@ -8,7 +8,7 @@
     "webpack:watch": "webpack --config webpack.config.js --watch",
     "lint": "tslint **/*.ts --exclude node_modules/",
     "build": "npm run webpack",
-    "start": "cross-env NODE_ENV=development npm run webpack:watch",
+    "start": "cross-env NODE_ENV=development ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts",
     "dev": "npm run start",
     "deploy": "cross-env NODE_ENV=production npm run build",
     "test:unit": "cross-env NODE_ENV=test jest --config jest.config.spec.js --runInBand",
@@ -26,8 +26,7 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "class-validator": "^0.14.0",
-    "fortjs": "^2.1.1"
+    "fortjs": "^2.4.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
@@ -38,6 +37,8 @@
     "nodemon-webpack-plugin": "^4.3.2",
     "ts-jest": "^29.1.0",
     "ts-loader": "^6.0.4",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tslint": "^5.11.0",
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
