--- a/rest/typescript/tsconfig.json
+++ b/rest/typescript/tsconfig.json
@@ -7,9 +7,9 @@
         "sourceMap": true,
         "inlineSources": true,
         "moduleResolution": "node",
-        "target": "es6",
+        "target": "ES2017",
         "preserveConstEnums": true,
-        "module": "es6",
+        "module": "CommonJS",
         "lib": [
             "es2015",
             "dom"
