--- a/crud/package.json
+++ b/crud/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/ujjwalguptaofficial/fortjs-typescript-starter#readme",
   "dependencies": {
-    "fortjs": "^2.5.1"
+    "fortjs": "^2.4.0",
+    "squirrelly": "^9.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
